--- a/app/src/main/res/layout/activity_pornsil.xml
+++ b/app/src/main/res/layout/activity_pornsil.xml
@@ -16,78 +16,91 @@
         android:id="@+id/imageView3"
         android:layout_width="430dp"
         android:layout_height="260dp"
-        app:srcCompat="@drawable/r"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/r" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="424dp"
         android:layout_height="46dp"
+        android:layout_marginTop="16dp"
         android:text="คณะวิทยาศาสตร์ประยุกต์และวิศวกรรมศาสตร์ "
         android:textColor="#fff"
-        android:textSize="20dp"
 
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="435dp" />
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView4"
 
         android:layout_width="192dp"
         android:layout_height="35dp"
+        android:layout_marginTop="36dp"
+
+
         android:text="Pornsil Meeseeboo"
-
-
         android:textColor="#fff"
         android:textSize="20dp"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="298dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:text="603410210-1"
+
         android:textColor="#fff"
         android:textSize="20dp"
-
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="342dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
         android:text="มหาวิทยาลัยขอนแก่น วิทยาเขตหนองคาย"
+
         android:textColor="#fff"
 
         android:textSize="20dp"
-
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="387dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="117dp"
         android:layout_height="44dp"
+        android:layout_marginTop="20dp"
         android:text="GPA1.96"
         android:textColor="#fff"
-        android:textSize="20dp"
 
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="540dp" />
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:text="สาาขาวิทายาการคอมพิวเตอร์และสารสนเทศ"
+
         android:textColor="#fff"
         android:textSize="20dp"
-
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="493dp" /><![CDATA[
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" /><![CDATA[
 
 
 
